deploy: 988bd7e42aa50fd417f8008b47d5ddf3adda1ec2

--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
         <!--a href="https://forms.gle/jNm8xFWJHn3RTTyY8">Registration form</a-->
         <!--a href="https://forms.gle/rwfr1JEnYQBJJAks7">CFP: Talks</a-->
         <!--a href="https://github.com/Igalia/webengineshackfest/issues/new?template=breakout_session.yaml">CFP: Breakout Sessions</a-->
-        <a href="https://github.com/Igalia/webengineshackfest/wiki#scheduling">Scheduling</a>
-        <a href="https://www.youtube.com/live/De4n7vjEO1o">Live streaming</a>
+        <!--a href="https://github.com/Igalia/webengineshackfest/wiki#scheduling">Scheduling</a-->
+        <!--a href="https://www.youtube.com/live/De4n7vjEO1o">Live streaming</a-->
+        <a href="#talks">Talks Recordings</a>
+        <a href="#breakout-sessions">Breakout Sessions</a>
       </div>
     </header>
 
