--- a/sponsoring/index.html
+++ b/sponsoring/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="web hackfest, web engines hackfest, web engines, web browsers hackfest, web browsers, browsers hackfest, hackfest, conference, web conference, web engines conference, web platform, open web platform, open web hackfest, open web, chromium, blink, v8, safari, webkit, jsc, firefox, gecko, spidermonkey, servo, ladybird, wpt, test262, w3c, whatwg, tc39, specifications, documentation, mdn, web compat" />
   <meta name="author" content="Igalia" />
 
-  <title>2025 Web Engines Hackfest</title>
+  <title>2026 Web Engines Hackfest</title>
 
   <link rel="icon" href="/favicon.ico" />
   <link href="/css/style.css" rel="stylesheet" />
@@ -20,11 +20,11 @@
 
 </head>
 
-    <script>document.title = "Web Engines Hackfest 2025 Sponsoring Packages"</script>
+    <script>document.title = "Web Engines Hackfest 2026 Sponsoring Packages"</script>
     <nav>
       <ul>
         <li>
-          <a href="/">Web Engines Hackfest 2025</a>
+          <a href="/">Web Engines Hackfest 2026</a>
         </li>
       </ul>
     </nav>
@@ -34,7 +34,7 @@
         <div class="section-wrapper">
           <h2>Sponsoring Packages</h2>
 <h3>Levels</h3>
-<h4>Gold Sponsor: 10,000 EUR</h4>
+<h4>Gold Sponsor: TBD EUR</h4>
 <ul>
 <li>Benefits:
 <ul>
@@ -47,7 +47,7 @@
 </ul>
 </li>
 </ul>
-<h4>Silver Sponsor: 5,000 EUR</h4>
+<h4>Silver Sponsor: TBD EUR</h4>
 <ul>
 <li>Benefits:
 <ul>
@@ -60,7 +60,7 @@
 </ul>
 </li>
 </ul>
-<h4>Bronze Sponsor: 2,000 EUR</h4>
+<h4>Bronze Sponsor: TBD EUR</h4>
 <ul>
 <li>Benefits:
 <ul>
@@ -73,7 +73,7 @@
 </ul>
 <div style="break-inside: avoid; padding-block: 1em;">
 <h3>Other</h3>
-<h4>Lunch Sponsor: 6,000 EUR</h4>
+<h4>Lunch Sponsor: 10,000 EUR</h4>
 <ul>
 <li>Description: Provide lunch for people attending the hackfest.</li>
 <li>Benefits:
@@ -86,8 +86,7 @@
 </ul>
 </li>
 </ul>
-<div class="sold">
-<h4>Coffee &amp; Snacks Sponsor: 3,000 EUR (SOLD)</h4>
+<h4>Coffee &amp; Snacks Sponsor: 5,000 EUR</h4>
 <ul>
 <li>Description: Provide coffee &amp; snacks for people attending the hackfest.</li>
 <li>Benefits:
@@ -100,7 +99,6 @@
 </ul>
 </li>
 </ul>
-</div>
 </div>
 <hr>
 <div style="font-size: smaller; font-style: italic;">
