--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <section id="hackfest">
 <div class="section-wrapper">
 <h2>The hackfest</h2>
-<p><strong>The <em>2026 Web Engines Hackfest</em> will take place in A Coruña, Galicia, Spain from Monday, June 2nd to Wednesday, June 4th.</strong></p>
+<p><strong>The <em>2026 Web Engines Hackfest</em> will take place in A Coruña, Galicia, Spain from Monday, June 15th to Wednesday, June 17th.</strong></p>
 <p><strong>Registration form will open in the coming weeks.</strong></p>
 <!--
 
