deploy: cc9a8b6b6ba8da01242626e06a60c46eaf683900

--- a/index.html
+++ b/index.html
@@ -851,9 +851,10 @@ code of conduct.</p>
 <li>Danielle Mayabb</li>
 <li>Eric Meyer</li>
 <li>Javier Moran</li>
+<li>Stephen Chenney</li>
 </ul>
 <p>For urgent issues, you may also call <a href="tel:+34951204844">+34 951 204 844</a> and then enter the PIN
-<code>1818</code> followed by the hash sign (<code>#</code>). This will call Andy Wingo, Brenna Brown, and Eric Meyer.</p>
+<code>1818</code> followed by the hash sign (<code>#</code>). This will call Andy Wingo, Danielle Mayabb, and Javier Moran.</p>
 <p>People reported as violating the code of conduct will not take part in the
 process of handling that report. After the report, immediate action will be
 taken to ensure the safety and well-being of those involved.</p>
