--- a/sponsoring/index.html
+++ b/sponsoring/index.html
@@ -34,12 +34,27 @@
         <div class="section-wrapper">
           <h2>Sponsoring Packages</h2>
 <h3>Levels</h3>
-<h4>Gold Sponsor: TBD EUR</h4>
+<h4>Platinum Sponsor: 20,000 EUR</h4>
+<ul>
+<li>Benefits:
+<ul>
+<li><strong>Company roll-up banner (200x80 cm)</strong> displayed at the hackfest venue during the event.</li>
+<li><strong>Company logo</strong> visible in the speakers lectern during the hackfest talks.</li>
+<li><strong>Huge size company logo</strong> in the hackfest website and wiki:<br>
+<a href="http://webengineshackfest.org/#sponsors">http://webengineshackfest.org/#sponsors</a><br>
+<a href="https://github.com/Igalia/webengineshackfest/wiki/#sponsors">https://github.com/Igalia/webengineshackfest/wiki/#sponsors</a></li>
+<li><strong>Huge size company logo</strong> at the <strong>beginning and end</strong> of any video published related to the hackfest:<br>
+<a href="https://www.youtube.com/channel/UCPQ8NaRSfsGei1j1meO4pNg">https://www.youtube.com/channel/UCPQ8NaRSfsGei1j1meO4pNg</a></li>
+<li><strong>Company will be listed as sponsor</strong> in all the hackfest communications: announcement, piece of news, posts, etc.</li>
+</ul>
+</li>
+</ul>
+<h4>Gold Sponsor: 10,000 EUR</h4>
 <ul>
 <li>Benefits:
 <ul>
 <li><strong>Big size company logo</strong> in the hackfest website and wiki:<br>
-<a href="http://webengineshackfest.org/2023#sponsors">http://webengineshackfest.org/2023#sponsors</a><br>
+<a href="http://webengineshackfest.org/#sponsors">http://webengineshackfest.org/#sponsors</a><br>
 <a href="https://github.com/Igalia/webengineshackfest/wiki/#sponsors">https://github.com/Igalia/webengineshackfest/wiki/#sponsors</a></li>
 <li><strong>Big size company logo</strong> at the <strong>beginning and end</strong> of any video published related to the hackfest:<br>
 <a href="https://www.youtube.com/channel/UCPQ8NaRSfsGei1j1meO4pNg">https://www.youtube.com/channel/UCPQ8NaRSfsGei1j1meO4pNg</a></li>
@@ -47,12 +62,12 @@
 </ul>
 </li>
 </ul>
-<h4>Silver Sponsor: TBD EUR</h4>
+<h4>Silver Sponsor: 5,000 EUR</h4>
 <ul>
 <li>Benefits:
 <ul>
 <li><strong>Medium size company logo</strong> in the hackfest website and wiki:<br>
-<a href="http://webengineshackfest.org/2023#sponsors">http://webengineshackfest.org/2023#sponsors</a><br>
+<a href="http://webengineshackfest.org/#sponsors">http://webengineshackfest.org/#sponsors</a><br>
 <a href="https://github.com/Igalia/webengineshackfest/wiki/#sponsors">https://github.com/Igalia/webengineshackfest/wiki/#sponsors</a></li>
 <li><strong>Medium size company logo</strong> at the <strong>end</strong> of any video published related to the hackfest:<br>
 <a href="https://www.youtube.com/channel/UCPQ8NaRSfsGei1j1meO4pNg">https://www.youtube.com/channel/UCPQ8NaRSfsGei1j1meO4pNg</a></li>
@@ -60,12 +75,12 @@
 </ul>
 </li>
 </ul>
-<h4>Bronze Sponsor: TBD EUR</h4>
+<h4>Bronze Sponsor: 2,500 EUR</h4>
 <ul>
 <li>Benefits:
 <ul>
 <li><strong>Small size company logo</strong> in the hackfest website and wiki:<br>
-<a href="http://webengineshackfest.org/2023#sponsors">http://webengineshackfest.org/2023#sponsors</a><br>
+<a href="http://webengineshackfest.org/#sponsors">http://webengineshackfest.org/#sponsors</a><br>
 <a href="https://github.com/Igalia/webengineshackfest/wiki/#sponsors">https://github.com/Igalia/webengineshackfest/wiki/#sponsors</a></li>
 <li><strong>Company will be listed as sponsor</strong> in all the hackfest communications: announcement, piece of news, posts, etc.</li>
 </ul>
@@ -81,7 +96,7 @@
 <li><strong>Special mention</strong> about company sponsoring lunch.</li>
 <li>Some <strong>signage with company logo</strong> during lunch.</li>
 <li><strong>Small size company logo</strong> in the hackfest website and wiki:<br>
-<a href="http://webengineshackfest.org/2023#sponsors">http://webengineshackfest.org/2023#sponsors</a><br>
+<a href="http://webengineshackfest.org/#sponsors">http://webengineshackfest.org/#sponsors</a><br>
 <a href="https://github.com/Igalia/webengineshackfest/wiki/#sponsors">https://github.com/Igalia/webengineshackfest/wiki/#sponsors</a></li>
 </ul>
 </li>
@@ -94,7 +109,7 @@
 <li><strong>Special mention</strong> about company sponsoring coffee &amp; snacks.</li>
 <li>Some <strong>signage with company logo</strong> on the cofeee &amp; snacks tables.</li>
 <li><strong>Small size company logo</strong> in the hackfest website and wiki:<br>
-<a href="http://webengineshackfest.org/2023#sponsors">http://webengineshackfest.org/2023#sponsors</a><br>
+<a href="http://webengineshackfest.org/#sponsors">http://webengineshackfest.org/#sponsors</a><br>
 <a href="https://github.com/Igalia/webengineshackfest/wiki/#sponsors">https://github.com/Igalia/webengineshackfest/wiki/#sponsors</a></li>
 </ul>
 </li>
