deploy: 6ed01eb81d1ff70030e3aa117403483971fc3b4f

--- a/index.html
+++ b/index.html
@@ -355,146 +355,42 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 </section>
 <section id="attendees">
 <div class="section-wrapper">
-<h2>Attendees (from previous edition)</h2>
+<h2>Attendees</h2>
 <ul>
 <li>Aapo Alasuutari</li>
-<li>Abhijeet Kandalkar</li>
-<li>Adrián Mora Rodríguez</li>
-<li>Adrián Pérez de Castro</li>
-<li>Alejandro G. Castro</li>
+<li>Adrian Perez de Castro</li>
 <li>Alexander Dunaev</li>
-<li>Alice Boxhall</li>
-<li>Alicia Boya Garcia</li>
 <li>Andreu Botella</li>
-<li>Angel M Miguel</li>
-<li>Ankesh Bharti</li>
-<li>Anna Weine</li>
-<li>Anne van Kesteren</li>
 <li>Antonio Gomes Netto</li>
-<li>Bernd Kaiser</li>
+<li>Behdad Esfahbod</li>
 <li>Brian Kardell</li>
-<li>Byungwoo Lee</li>
-<li>Carlos Bentzen</li>
-<li>Carmen Cañas</li>
-<li>Casiano Rodriguez-Leon</li>
-<li>Chengzhong Wu</li>
-<li>Chris Cuellar</li>
-<li>Christian Liebel</li>
-<li>Christian Ulbrich</li>
-<li>Claire Hurst</li>
-<li>Claudio Saavedra</li>
-<li>Daniel Ehrenberg</li>
-<li>Daniel Huigens</li>
+<li>Cynthia Shelly</li>
 <li>Dave Vandyke</li>
-<li>Delan Azabani</li>
-<li>Diego González</li>
 <li>Diego Pino Garcia</li>
 <li>Dietrich Ayala</li>
-<li>Dmitry Bezhetskov</li>
-<li>Dominik Röttsches</li>
-<li>Dongxu Liu</li>
-<li>Eemeli Aro</li>
-<li>Emilio Cobos Álvarez</li>
+<li>Elena Lape</li>
+<li>Emilio Cobos</li>
 <li>Enrique Ocaña González</li>
 <li>Eri Pazos Pérez</li>
-<li>Frédéric Wang</li>
-<li>Gengming Liu</li>
-<li>Georges Basile Stavracas Neto</li>
-<li>Giorgio Maone</li>
-<li>Gyuyoung Kim</li>
-<li>Haili Bai</li>
-<li>Henrique Ferreiro</li>
-<li>Ian Grunert</li>
-<li>Ioanna M. Dimitriou H.</li>
-<li>Jacob</li>
-<li>Jacobo Aragunde Pérez</li>
-<li>Jan Bajana</li>
-<li>Javier Fernandez Garcia-Boente</li>
-<li>Jeongeun Kim</li>
-<li>Jesse Alama</li>
-<li>John Xu</li>
-<li>Jon Butler</li>
-<li>Jon Kuperman</li>
-<li>Jonas Haukenes</li>
-<li>Jonas Kruckenberg</li>
-<li>Jonas Menken</li>
-<li>Jonathan Kew</li>
-<li>Jonathan Schwender</li>
-<li>José Dapena Paz</li>
-<li>Joyee Cheung</li>
-<li>Juan J. Sanchez</li>
+<li>Jacob Smith</li>
 <li>Justin Michaud</li>
-<li>Keeley Hammond</li>
-<li>Keith Cirkel</li>
 <li>Kyungsun Lee</li>
-<li>Leo Kettmeir</li>
 <li>Lino Le Van</li>
-<li>Lorenzo Tilve</li>
-<li>Luca Casonato</li>
-<li>Luke Hubbard</li>
 <li>Luke Warlow</li>
-<li>Maksim Sisov</li>
 <li>Manuel Rego</li>
-<li>Marais Rossouw</li>
-<li>Mario Sánchez-Prada</li>
-<li>Martin Alvarez-Espinar</li>
 <li>Martin Robinson</li>
-<li>Max Ihlenfeldt</li>
 <li>Maxim Yaskevich</li>
-<li>Miguel Gomez</li>
-<li>Mike Pennisi</li>
-<li>Mikhail Barash</li>
-<li>Miyoung Shin</li>
-<li>Ms2ger</li>
-<li>Mukilan Thiyagarajan</li>
-<li>Nguyen Viet Do</li>
-<li>Nick Pfeiffer</li>
-<li>Nick Yamane</li>
-<li>Nico Burns</li>
+<li>Mioyoung Shin</li>
 <li>Nicolò Ribaudo</li>
-<li>Nikolas Zimmermann</li>
-<li>Nina Kolesa</li>
-<li>Oliver Medhurst</li>
-<li>Olivier Tilloy</li>
-<li>Oriol Brufau</li>
-<li>Pablo Saavedra Rodiño</li>
-<li>Pablo Santana Gonzalez</li>
-<li>Patrick Griffis</li>
+<li>Niklas Merz</li>
 <li>Pawel Lampe</li>
-<li>Philip Chimento</li>
-<li>Philippe Normand</li>
-<li>Pier Angelo Vendrame</li>
-<li>Przemyslaw Gorszkowski</li>
-<li>Rafael Fernández López</li>
-<li>Rakhi Sharma</li>
-<li>Raphael Kubo da Costa</li>
-<li>Rob Buis</li>
 <li>Robert Kroeger</li>
-<li>Robin Berjon</li>
-<li>Roger Zanoni</li>
-<li>Romulo Cintra</li>
-<li>Rui Hildt</li>
-<li>Sam Weinig</li>
 <li>Sergey Rubanov</li>
-<li>Shane F Carr</li>
 <li>sideshowbarker</li>
-<li>Simon Pena</li>
 <li>Simon Wülker</li>
 <li>snek</li>
 <li>Stefan Reinhold</li>
-<li>Stephen Chenney</li>
-<li>Thomas Steiner</li>
-<li>Tom Schuster</li>
-<li>Ujjwal Sharma</li>
-<li>Valerie Young</li>
-<li>Vincent Hilla</li>
-<li>Vitaly Dyachkov</li>
-<li>Vlad Zahorodnii</li>
 <li>Xabier Rodríguez Calvar</li>
-<li>Xiaoqian Wu</li>
-<li>Yeunjoo Choi</li>
-<li>Youenn Fablet</li>
-<li>Yutao Liu</li>
 </ul>
 </div>
 </section>
