deploy: 0b0edd242036e8b1cb079476d3ba778a5da55fe0

--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Brian Kardell</li>
 <li>Cynthia Shelly</li>
 <li>Dave Vandyke</li>
+<li>Delan Azabani</li>
 <li>Diego Pino Garcia</li>
 <li>Dietrich Ayala</li>
 <li>Elena Lape</li>
@@ -373,6 +374,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Enrique Ocaña González</li>
 <li>Eri Pazos Pérez</li>
 <li>Jacob Smith</li>
+<li>Jonas Kruckenberg</li>
 <li>Justin Michaud</li>
 <li>Kyungsun Lee</li>
 <li>Lino Le Van</li>
@@ -390,6 +392,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Simon Wülker</li>
 <li>snek</li>
 <li>Stefan Reinhold</li>
+<li>Thomas Steiner</li>
 <li>Xabier Rodríguez Calvar</li>
 </ul>
 </div>
