deploy: 9e3a1781e35d44bb0220e60669380c99babcbec3

--- a/index.html
+++ b/index.html
@@ -375,6 +375,7 @@ if ((dialog != null) && (dialog.tagName == "DIALOG")) {
 <li>Eri Pazos Pérez</li>
 <li>Jacob Smith</li>
 <li>Jonas Kruckenberg</li>
+<li>Josh Bowman-Matthews</li>
 <li>Justin Michaud</li>
 <li>Kyungsun Lee</li>
 <li>Lino Le Van</li>
